# install-ubuntu1804

./: .gitignore  README.md  install-ubuntu1804-1-basic.sh  install-ubuntu1804-1-nvidia.sh  install-ubuntu1804-10-nvidia-docker.sh  install-ubuntu1804-11-caffe.sh  install-ubuntu1804-2-basic.sh  install-ubuntu1804-2-ros.sh  install-ubuntu1804-3-ros.sh  install-ubuntu1804-4-autoware1.13.0.sh  install-ubuntu1804-4-opencv3410.sh  install-ubuntu1804-4-opencv412.sh  install-ubuntu1804-5-caffe.sh  install-ubuntu1804-6-tensorflow.sh  install-ubuntu1804-7-autoware1.13.0.sh  install-ubuntu1804-7-lgsvl-python-api.sh  install-ubuntu1804-9-ssd.sh  install-ubuntu1804.sh
src/ros-packages/: CMakeLists.txt  package.xml
unfinished_scripts/: install-ubuntu1804-loop-unused.sh
