<?xml version="1.0"?>
<package format="2">
  <name>ros-packages</name>
  <version>0.0.1</version>
  <description>ros-packages packages</description>
  <maintainer email="kelvinkang@cmu.edu">kelvinkang</maintainer>
  <license>STRICTLY CONFIDENTIAL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>sick_tim</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>pointcloud_to_laserscan</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>amcl</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>pid</build_depend>
  <build_depend>velodyne</build_depend>
  <build_depend>microstrain_mips</build_depend>
  <build_depend>rosserial</build_depend>
  <build_depend>rosserial_tivac</build_depend>
  <build_depend>rosserial_server</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>ros_canopen</build_depend>
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gmapping</build_depend>    
                                      
  <exec_depend>gmapping</exec_depend>
  <exec_depend>tf</exec_depend>                             
  <exec_depend>nav_msgs</exec_depend>                                      
  <exec_depend>geometry_msgs</exec_depend> 
  <exec_depend>ros_canopen</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>rosserial_server</exec_depend>
  <exec_depend>rosserial_tivac</exec_depend>
  <exec_depend>rosserial</exec_depend>
  <exec_depend>microstrain_mips</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>sick_tim</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>pid</exec_depend>
  <exec_depend>velodyne</exec_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
</package>
